fix parallax image not showing

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -123,7 +123,7 @@ to {
 //----- Parrallax Ends ----------//
 .parallax {
     /* The image used */
-    background-image: url("assets/images/h1-parallax-1.jpg");
+    background-image: url("../assets/images/h1-parallax-1.jpg");
 
     /* Full height */
     height: 400px;
